syntax = "proto3";

option go_package = "pb3";
option java_package = "com.qingyuanos.core.googleprotobuf.pb3";
option java_outer_classname = "ContainerImageBuildGRPCService";

package paas.cicd.pb3;

import "google/api/annotations.proto";
//import "google/protobuf/any.proto";

import "paas/cicd/pb3/builder.proto";

service ContainerImageBuildService {

    // Template-driven
    //
	rpc TemplateBuildingOntoStream(stream TemplatizedBuilderRequest) returns (stream TemplatizedBuilderResponse) {
	}

}